--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd": "^3.0.1",
+    "axios": "^0.17.1",
     "babel-runtime": "^6.9.2",
     "dva": "^2.0.0",
     "react": "^15.4.0",
