--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "antd": "^3.0.1",
     "axios": "^0.17.1",
     "babel-runtime": "^6.9.2",
+    "blueimp-md5": "^2.10.0",
     "dva": "^2.0.0",
+    "dva-loading": "^1.0.4",
+    "nprogress": "^0.2.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
